2001-06-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* actors.*, keyactions.cc: double clicking avatar shows inventory again
	* gumps/gump_types.h: extracted Gumpshapefile to a header file
	* gamewin.cc, gumps/Gump.cc, gumps/Gump_widget.*, gumps/gump_types.h:
	added paperdol.vga to the Gumpshapefile enum
	* gumps/Gump_button.h, gumps/Face_button.*: a face that opens 
	inventory when double clicked
	* gumps/Gump.cc, gumps/CombatStats_gump.*: the SI combat stats gump
	* keyactions.*, keys.*, defaultkeys.txt: 'L' = show combat stats
	* shapeid.h: removed some outdated comments
	* gumps/Gump_ToggleButton.h: made toggle() purely virtual
	* gumps/Paperdoll_gump.h: made GetCharacterInfo, GetItemInfo public
	* gumps/misc_buttons.cc: implemented the combat stats button
	

2001-06-08  Ryan Nunn <triforce@merlin.net.au>
	* exult.cc, keyactions.cc, mouse.h: When gumps are open, the cursor
	  will now only be the hand when the mouse is actually over a gump.

2001-06-08  Ryan Nunn <triforce@merlin.net.au>
	* audio/xmidi.cc : Volume curve now modifies Volume Controller events as
	  well as Note On Velocity values. Volume Curve now has a greater
	  impact and works "better". The difference is anything but subtle in
	  some songs.

2001-06-08  Dancer Vesperman <dancer@users.sourceforge.net>
	- Code Nazi
	* mapedit/shapedraw.cc: std::cout, std::endl

2001-06-07  Ryan Nunn <triforce@merlin.net.au>
	* audio/xmidi.cc : Fixed Pub Music (BG Track 20) "Bug"

2001-06-07  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/faq/faqs.dtd, faq_html.xsl: added "Exult Studio" template
	* docs/faq/exult_faq.xml: FAQ updated see FAQ for details
	* Faq: updated

2001-06-07  Jeff Freedman  <jeff@amy.nerble.net>

	* 'Tournament' flag is back; I was wrong about it being
	'killable'.  Also Usecode(eventid==7) is only called when the
	'tournament' flag is set.  Seems to work so far.

2001-06-05  Willem Jan Palenstijn <palenstijn@wanadoo.nl>