@@ -270,6 +270,8 @@ void Game_window::init_files()
 	poison_pixel = pal->find_color(4, 63, 4);
 					// Get a light gray.
 	protect_pixel = pal->find_color(62, 62, 55);
+					// Red for hit in battle.
+	hit_pixel = pal->find_color(63, 4, 4);
 	usecode = new Usecode_machine(this);
 					// Get custom usecode functions.
 	string gametitle = Game::get_game_type() == BLACK_GATE ?
